feat: show all product with filter
